--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="header-body-content">
         <div class="container container-header-body">
             <image class="zomato-logo" src="https://b.zmtcdn.com/web_assets/8313a97515fcb0447d2d77c276532a511583262271.png"/>
-            <p class="para">Find the best restaurants, caf`es<br><span class="span">and bars in india</span></p> 
+            <p class="para">Find the best restaurants, cafés<br><span class="span">and bars in india</span></p> 
         </div>
     </div>
     </div>
